# C-Tasks

./: CMakeLists.txt
Box Print/: CMakeLists.txt  main.cpp
Largest groups of anagrams/: CMakeLists.txt  main.cpp
Manipulating the display format of data/: CMakeLists.txt  main.cpp
New algorithms/: CMakeLists.txt  main.cpp
Reversing words/: CMakeLists.txt  main.cpp
Splitting ranges into chunks/: CMakeLists.txt  main.cpp
Standard library enhancements/: CMakeLists.txt
manipulatingTheDisplayFormatOfData/: manipulatingTheDisplayFormatOfData.cpp
newAlgorithms/: newAlgorithms.cpp
reversingWordsByTheirOrder/: reversingWords.cpp
standardLibraryEnhancements/: standardLibraryEnhancements.cpp
